# MATLIB

./: CMakeLists.txt  README.md  cdouble.cpp  cdouble.h  cfloat.cpp  cfloat.h  main.cpp  matlib.cpp  matlib.h
discarded/: cfloat.cpp  cfloat.h  template_matrix.cpp  template_matrix.h
